# 4nykey

./: .gitignore
app-admin/lastpass/: Manifest  lastpass-9999.ebuild
app-admin/lnav/: Manifest  lnav-0.8.3.ebuild  lnav-9999.ebuild
app-arch/7-zip/: 7-zip-23.01.ebuild  7-zip-24.05.ebuild  7-zip-24.07.ebuild  7-zip-24.08.ebuild  7-zip-24.09.ebuild  Manifest  metadata.xml
app-arch/brotli/: Manifest  brotli-0.6.0.ebuild  brotli-9999.ebuild
app-arch/fxz/: Manifest  fxz-1.1.0_pre20220109.ebuild  fxz-9999.ebuild  metadata.xml
app-arch/gpar2/: Manifest  gpar2-0.3.ebuild
app-arch/wimlib/: Manifest  metadata.xml  wimlib-1.9.2.ebuild  wimlib-9999.ebuild
app-cdr/isomaster/: Manifest  isomaster-0.3.ebuild  isomaster-0.5.ebuild
app-cdr/rubyripper/: Manifest  rubyripper-0.1.1.ebuild  rubyripper-0.1.ebuild  rubyripper-0.2.ebuild
app-crypt/chrome-token-signing/: Manifest  chrome-token-signing-1.1.2.ebuild  chrome-token-signing-9999.ebuild
app-crypt/digidoc4-client/: Manifest  digidoc4-client-4.5.1.ebuild  digidoc4-client-9999.ebuild  metadata.xml
app-crypt/hwcrypto-native/: Manifest  hwcrypto-native-17.3.16.ebuild  hwcrypto-native-9999.ebuild
app-crypt/qdigidoc/: Manifest  metadata.xml  qdigidoc-3.10.0.1401.ebuild  qdigidoc-3.10.0.ebuild  qdigidoc-3.11.1.ebuild  qdigidoc-3.12.6.ebuild  qdigidoc-3.12.7_beta.ebuild  qdigidoc-3.8.1.1250.ebuild  qdigidoc-3.9.0.1297.ebuild  qdigidoc-3.9.1.1369.ebuild  qdigidoc-3.9.9999.ebuild  qdigidoc-9999.ebuild
app-crypt/qesteidutil/: Manifest  metadata.xml  qesteidutil-3.10.1.1187.ebuild  qesteidutil-3.10.1.ebuild  qesteidutil-3.12.2.ebuild  qesteidutil-3.7.2.1079.ebuild  qesteidutil-3.8.2.1134.ebuild  qesteidutil-9999.ebuild
app-crypt/tera/: Manifest  tera-1.0.ebuild  tera-9999.ebuild
app-crypt/web-eid/: Manifest  web-eid-2.2.0_rc1.ebuild  web-eid-9999.ebuild
app-dicts/aarddict/: Manifest  aarddict-9999.ebuild
app-dicts/aardtools/: Manifest  aardtools-9999.ebuild
app-dicts/dictconv/: Manifest  dictconv-0.2.ebuild
app-dicts/jalingo/: Manifest  jalingo-0.6.0.ebuild
app-dicts/makedict/: Manifest  makedict-0.3.ebuild  makedict-0_p20160128.ebuild  makedict-9999.ebuild
cross-i686-pc-cygwin/: howto
cross-x86_64-pc-cygwin/: howto
cross-x86_64-w64-mingw32/: howto
dev-python/: ninja-python-distributions-1.11.1.2  ninja-python-distributions-9999
eclass/: bzr.eclass  font-r1.eclass  fontmake.eclass  git.eclass  gmpc-plugin.eclass  wxwidgets-nu.eclass
licenses/: CC-BY-NC-SA-4.0  CC-BY-ND-4.0  EULA  Samsung-EULA  undetermined
media-sound/musepack-tools/files/: CMakeLists.txt  Makefile  digest-musepack-tools-1.15v  digest-musepack-tools-1.16  mppdec-gcc40.diff  mppdec-mpp_h.diff  mppdec-rg_smartskip.diff  mppenc-cmake_add_dir.diff  musepack-tools-9999-as_needed.patch  musepack-tools-9999-cmake_cflags.patch  musepack-tools-9999-cmake_cuefile.patch  musepack-tools-9999-cmake_install.patch  musepack-tools-9999-cue_cmake.diff  musepack-tools-9999-cuetools.diff  musepack-tools-9999-gentoo.patch  musepack-tools-9999-no_headers.patch  musepack-tools-cmake_install.patch  musepack-tools-fast_seeking.diff  musepack-tools-gcc40.diff  musepack-tools-sv7_seeking.diff  musepack-tools-tags.diff
metadata/: layout.conf
profiles/: categories  make.defaults  package.mask  repo_name  thirdpartymirrors  use.desc  use.local.desc
(+4110 files in other folders)
